# gla

./: CMakeLists.txt  NOTES
cmake/: FindAPR.cmake  FindAPRUtil.cmake  FindCsv.cmake  FindGraVM.cmake  FindPCRE.cmake  FindSquirrel.cmake  FindYaml.cmake
include/gla/: core.h
sqlib/: _mount.nut
sqlib/gla/: HelloWorld2.nut
sqlib/gla/csv/: CallbackParser.nut
sqlib/gla/goprr/: Binder.nut  DumpGraphML.nut  Generator.nut  IDEAS.txt  Recursor.nut  Walker.nut  Walker.old  WalkerNode.nut  _description.nut
sqlib/gla/graphml/: DefaultWalker.nut  Loader.graphml  Loader.nut  Loader.tgf  WalkerDefGenerator.nut  _run_loader.nut  bootstrapLoader.nut  dump.nut  mkWalkerDef.nut
sqlib/gla/io/: Buffer.nut  File.nut  FilePath.nut  HashFunction.nut  IO.nut  PackagePath.nut  PathUtil.nut  _init.nut
sqlib/gla/model/: Adapter.nut  Builder.nut  Converter.nut  Edge.nut  Generator.nut  Graph.nut  Importer.nut  Meta.nut  Model.nut  Node.nut  Parser.nut  Walker.nut  WalkerEdge.nut  WalkerNode.nut
sqlib/gla/snippet/: DefaultSnippet.nut  FileParser.nut  Snippet.nut
sqlib/gla/storage/: Builder.nut  ColumnSpec.nut  Database.nut  Iterator.nut  SimpleTable.nut  Store.nut  Table.nut  _init.nut
sqlib/gla/string/: Identifier.nut  Slice.nut  Unicode.nut  helper.nut
sqlib/gla/textgen/: DumpSink.nut  IOSink.nut  Printer.nut  PrinterDirectory.nut  StringSink.nut
sqlib/gla/tgf/: CallbackParser.nut
sqlib/gla/util/: Date.nut  (+8 more)
sqlib/sandbox/: Document.xml  TestTgf.tgf  bdb.nut  bingen.nut  buffer.nut  crc32.nut  csv.nut  dlimport.nut  dump.nut  env.nut  errormain.nut  errorsource.nut  eval.nut  exec.nut  exists.nut  goprr.nut  goprrdump.nut  graphml.nut  import.nut  importme.nut  io.nut  local.nut  map.nut  mntregistry.nut  mnttest.nut  multitab.nut  pathit.nut  pop.graphml  preproc.nut  printer.nut  recursion.nut  rename.nut  simpletab.nut  st.nut  stackexec.nut  stbdb.nut  storage.nut  storage_bdb.nut  storage_new.nut  super.nut  (+11 more)
src/: _io.h  _mount.h  common.h  entityreg.c  entityreg.h  io.c  log.h  main.c  mnt_dir.c  mnt_dir.h  mnt_internal.c  mnt_internal.h  mnt_registry.c  mnt_registry.h  mnt_stdio.c  mnt_stdio.h  mount.c  packreg.c  packreg.h  path.c  platform.h  preproc.c  preproc.h  regex.c  regex.h  rt.c  rt.h  store.c  store.h
src/csv/: cbparser.c  cbparser.h  module.c  module.h
src/io/: _hash.h  _rtdata.h  buffer.c  buffer.h  file.c  file.h  hash.c  hash.h  io.c  io.h  module.c  module.h  packpath.c  packpath.h
src/locale/: date.c  date.h  exec.c  exec.h  module.c  module.h  stackexec.c  stackexec.h  time.c  time.h
src/platform/: unix.c
src/sqstdlib/: module.c  module.h
src/storage/: _colspec.h  _table.h  bdb.c  bdb.h  colspec.c  colspec.h  interface.c  interface.h  memory.c  memory.h  module.c  module.h
src/string/: module.c  module.h  unicode.c  unicode.h
src/util/: date.c  exec.c  module.c  module.h  stackexec.c  time.c
src/xml/: module.c  module.h  saxparser.c  saxparser.h
src/yaml/: cbparser.c  cbparser.h  module.c  module.h
test/: entityreg.h  main.h  mnt_internal.h  store.h
(+34 files in other folders)
